продолжаю обнослять сервис